[tool.poetry]
name = "playground-ai"
version = "0.1.0"
description = ""
authors = ["Lu Shueh C <wu0dj2k7ao3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
numpy = "1.26.4"
evidently = "^0.6.7"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
